fix: address bar overflow

--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
 }
 
 html {
-  overflow: hidden;
   width: 100%;
-  }
+}
 
 body {
   cursor: url('http://www.rw-designer.com/cursor-download.php?id=90885'), auto;
@@ -15,9 +14,6 @@ body {
   font-smooth: none;
   margin:0 !important;
   height: 100%;
-  position: fixed;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 /**
